--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,51 +19,40 @@ services:
       timeout: 3s
       retries: 20
 
-  # redis:
-  #   image: redis:7-alpine
-  #   restart: unless-stopped
-  #   command: ["redis-server", "--save", "", "--appendonly", "no"]
-  #   ports:
-  #     - "${REDIS_PORT:-6379}:6379"
-  #   healthcheck:
-  #     test: ["CMD", "redis-cli", "ping"]
-  #     interval: 5s
-  #     timeout: 3s
-  #     retries: 20
-
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     env_file: .env
     environment:
-      # Se tiveres DATABASE_URL no .env, Django pode usá-lo (dj-database-url).
+      DJANGO_SETTINGS_MODULE: ${DJANGO_SETTINGS_MODULE:-backend.config.settings}
       DATABASE_URL: ${DATABASE_URL:-postgres://cinemix:cinemix@db:5432/cinemix}
-      DJANGO_SETTINGS_MODULE: ${DJANGO_SETTINGS_MODULE:-config.settings}
       PYTHONUNBUFFERED: "1"
       APP_ENV: dev
-      # Mapear host/port da DB explicitamente (útil para scripts wait-for):
       DB_HOST: db
       DB_PORT: ${POSTGRES_PORT:-5432}
-      POSTGRES_DB: ${POSTGRES_DB:-cinemix}
       POSTGRES_USER: ${POSTGRES_USER:-cinemix}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-cinemix}
-      # REDIS_URL: ${REDIS_URL:-redis://redis:6379/0}
     volumes:
-      - ./backend:/code
+      - .:/code
       - static_volume:/code/staticfiles
       - media_volume:/code/media
     working_dir: /code
     depends_on:
       db:
         condition: service_healthy
-      # redis:
-      #   condition: service_healthy
     ports:
       - "8765:8000"
-    # Em dev, deixamos o teu entrypoint a correr o runserver ou gunicorn consoante preferires.
     command: >
-      sh -c "/code/entrypoint.sh"
+      sh -c "
+        echo 'A aguardar que a DB esteja healthy (via depends_on)...'
+        
+        echo 'A correr migrações...'
+        python manage.py migrate --no-input
+
+        echo 'A iniciar Django runserver (DEV)...'
+        python manage.py runserver 0.0.0.0:8000
+      "
 
   frontend:
     build:
@@ -71,13 +60,16 @@ services:
       dockerfile: Dockerfile
       target: dev
     environment:
-      # O Vite acede ao backend via http://localhost:8765 (nginx não é necessário em dev)
       VITE_API_URL: ${VITE_API_URL:-http://localhost:8765}
       NODE_ENV: development
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-    command: ["npm","run","dev","--","--host","0.0.0.0","--port","5173"]
+      - /app/node_modules # Protege a pasta de instalação do npm
+    # --- CORREÇÃO FINAL: Forçar a reinstalação e iniciar o servidor ---
+    command: >
+      sh -c "
+        npm install && npm run dev
+      "
     depends_on:
       - backend
     ports:
